🐠🚿 Updated with Glitch

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <a-scene id="scene" background="color: #000">  
       <a-entity id="camera" position="1 1 4" >
         <a-entity camera look-controls>
-          <a-text id="hud" value=">" color="white" position="-3 -3 -4" font="sourcecodepro"></a-text>
+          <a-text id="hud" value="Enter amount >" color="white" position="-3 -3 -4" font="sourcecodepro"></a-text>
         </a-entity>
       </a-entity>
     </a-scene>
